--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xyz.fluxinc</groupId>
     <artifactId>FluxCore</artifactId>
-    <version>1.2.3</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <name>FluxCore</name>
@@ -153,6 +153,12 @@
             <groupId>net.coreprotect</groupId>
             <artifactId>coreprotect</artifactId>
             <version>2.16.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Zrips</groupId>
+            <artifactId>Jobs</artifactId>
+            <version>4.16.3</version> <!-- Change the LATEST to the current version of jobs -->
             <scope>provided</scope>
         </dependency>
     </dependencies>
