--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <description>A core plugin for all plugins developed for/by FluxInc</description>
     <properties>
+        <mcmmo.dir>${project.basedir}/dep/McMMO.jar</mcmmo.dir>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -160,6 +161,13 @@
             <artifactId>Jobs</artifactId>
             <version>4.16.3</version> <!-- Change the LATEST to the current version of jobs -->
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.nossr50</groupId>
+            <artifactId>McMMO</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${mcmmo.dir}</systemPath>
         </dependency>
     </dependencies>
 </project>
