--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xyz.fluxinc</groupId>
     <artifactId>FluxCore</artifactId>
-    <version>1.4</version>
+    <version>1.4.1</version>
     <packaging>jar</packaging>
 
     <name>FluxCore</name>
@@ -123,6 +123,10 @@
             <id>factions-repo</id>
             <url>http://ci.ender.zone/plugin/repository/everything/</url>
         </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -163,11 +167,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.gmail.nossr50</groupId>
-            <artifactId>McMMO</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${mcmmo.dir}</systemPath>
+            <groupId>com.gmail.nossr50.mcMMO</groupId>
+            <artifactId>mcMMO</artifactId>
+            <version>2.1.202</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
