--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <artifactId>worldguard-bukkit</artifactId>
             <version>7.0.1</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sk89q.worldedit</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.TechFortress</groupId>
