Updated to java 1.17

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <description>A core plugin for all plugins developed for/by FluxInc</description>
     <properties>
         <mcmmo.dir>${project.basedir}/dep/McMMO.jar</mcmmo.dir>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -108,8 +108,12 @@
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
         <repository>
+            <id>factions-repo</id>
+            <url>https://ci.ender.zone/plugin/repository/everything/</url>
+        </repository>
+        <repository>
             <id>coreprotect-repo</id>
-            <url>http://maven.playpro.com</url>
+            <url>https://maven.playpro.com/</url>
         </repository>
         <repository>
             <id>jitpack.io</id>
@@ -117,11 +121,7 @@
         </repository>
         <repository>
             <id>sk89q-repo</id>
-            <url>https://maven.sk89q.com/repo/</url>
-        </repository>
-        <repository>
-            <id>factions-repo</id>
-            <url>http://ci.ender.zone/plugin/repository/everything/</url>
+            <url>https://maven.enginehub.org/repo/</url>
         </repository>
         <repository>
             <id>codemc-repo</id>
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.18.1-R0.1-SNAPSHOT</version>
+            <version>1.19-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -157,13 +157,13 @@
         <dependency>
             <groupId>com.massivecraft</groupId>
             <artifactId>Factions</artifactId>
-            <version>1.6.9.5-U0.2.1-SNAPSHOT</version>
+            <version>1.6.9.5-U0.6.12</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.coreprotect</groupId>
             <artifactId>coreprotect</artifactId>
-            <version>20.3</version>
+            <version>21.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
