--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,10 @@
             <id>commandapi</id>
             <url>https://raw.githubusercontent.com/JorelAli/CommandAPI/mvn-repo/</url>
         </repository>
+        <repository>
+            <id>placeholderapi</id>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -180,6 +184,12 @@
             <groupId>dev.jorel</groupId>
             <artifactId>commandapi-core</artifactId>
             <version>8.4.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.10.6</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
