--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: ${full.project.version}
 main: xyz.fluxinc.fluxcore.FluxCore
 api-version: 1.13
 prefix: FluxCore
+depend: [PlaceholderAPI, CommandAPI]
 softdepend: [GriefPrevention, WorldGuard, CoreProtect, mcMMO, Jobs]
 authors: [CelesteMagisteel]
 description: A core plugin for all plugins developed for/by FluxInc
