--- a/pom.xml
+++ b/pom.xml
@@ -182,8 +182,14 @@
         </dependency>
         <dependency>
             <groupId>dev.jorel</groupId>
+            <artifactId>commandapi-bukkit-core</artifactId>
+            <version>9.0.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>dev.jorel</groupId>
             <artifactId>commandapi-core</artifactId>
-            <version>8.4.1</version>
+            <version>9.0.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
